# Projects

./: README.md
AnalizaDanychPrzestrzennych/projekt_1/: .Rhistory  projekt_1.R
AnalizaDanychPrzestrzennych/zajecia 8/: Projekt 1.R  dodane.xlsx  tabela.txt  zad3.txt
AnalizaIPrzetwarzanieSygnalowIObrazowCyfrowych/403438_projekt/: 18_180_1n.jpg_meta.xml  18_210_xn.jpg_meta.xml  18_240_xn.jpg_meta.xml  18_330_xn.jpg_meta.xml  New Text Document.txt
AnalizaIPrzetwarzanieSygnalowIObrazowCyfrowych/NaukaObrazy/: nauka.m
AnalizaIPrzetwarzanieSygnalowIObrazowCyfrowych/NaukaSygnaly/: Nauka3.m  NaukaDzienPrzed.m  NaukaDzienSadu.m
BazyDanychPrzestrzennych/zad4/: zad.qgz
C++_ProgramowanieObiektowe/GorkaSzymon-etap2/: Fabryka.h  Komis.cpp  Komis.h  Motocykl.cpp  Motocykl.h  Pojazd.cpp  Pojazd.h  README  Rower.cpp  Samochod.cpp  Samochod.h
Java_ZakladFryzjerski-scrum/: README.md  pom.xml
MATLAB_AnalizaIPrzetwarzanieSygnalowIObrazowCyfrowych/403438_projekt/: 18_180_xn.jpg_meta.xml  18_270_xn.jpg_meta.xml  18_300_xn.jpg_meta.xml  Projekt.m
MATLAB_AnalizaIPrzetwarzanieSygnalowIObrazowCyfrowych/NaukaSygnaly/: Nauka0.m  Nauka1.m  Nauka2.m  NaukaPrzykladowe.m
PHP_cooking/: Untitled.ipynb  bitbucket-pipelines.yml  package-lock.json  readme.md
PHP_cooking/project/: .env.example  composer.json  package-lock.json  package.json  tailwind.config.js
ProgramowanieObiektowe/GorkaSzymon-etap2/: CMakeLists.txt  Fabryka.cpp  Lakiernik.cpp  Lakiernik.h  Pojazd_Silnikowy.cpp  Pojazd_Silnikowy.h  Rower.h  main.cpp  stdin.txt  temat2.txt
R_Modelowanie/: .RData  .Rhistory  antarktyda.R
(+160 files in other folders)
