cmake_minimum_required(VERSION 3.20)
project(GorkaSzymon-etap2)

set(CMAKE_CXX_STANDARD 14)

add_executable(GorkaSzymon-etap2 main.cpp Pojazd.cpp Pojazd.h Pojazd_Silnikowy.cpp Pojazd_Silnikowy.h Rower.cpp Rower.h Motocykl.cpp Motocykl.h Samochod.cpp Samochod.h Fabryka.cpp Fabryka.h Komis.cpp Komis.h Lakiernik.cpp Lakiernik.h)
